@@ -21,11 +21,11 @@ var cmThemeOffice =
 	mainFolderRight: '&nbsp;',
 	mainItemLeft: '&nbsp;',
 	mainItemRight: '&nbsp;',
-	folderLeft: '<img alt="" src="' + cmThemeOfficeBase + 'spacer.gif">',
-	folderRight: '<img alt="" src="' + cmThemeOfficeBase + 'arrow.gif">',
+	folderLeft: '<img alt="" src="' + cmThemeOfficeBase + 'spacer.gif" />',
+	folderRight: '<img alt="" src="' + cmThemeOfficeBase + 'arrow.gif" />',
 	folderRight: '',
-	itemLeft: '<img alt="" src="' + cmThemeOfficeBase + 'spacer.gif">',
-	itemRight: '<img alt="" src="' + cmThemeOfficeBase + 'blank.gif">',
+	itemLeft: '<img alt="" src="' + cmThemeOfficeBase + 'spacer.gif" />',
+	itemRight: '<img alt="" src="' + cmThemeOfficeBase + 'blank.gif" />',
 	mainSpacing: 0,
 	subSpacing: 0,
 	delay: 300
